--- a/docs/home/getting-support.mdx
+++ b/docs/home/getting-support.mdx
@@ -7,7 +7,7 @@ welcome to get in touch with Vital support through these channels:
 
 * Email Support (help@tryvital.io)
 * Vital Slack community support channel (#vital-support)
-* Your dedicated Slack support channel (Scale plan customers).
+* Your dedicated Slack support channel (for Scale plan customers).
 
 We appreciate as much context as possible when you raise an issue. This helps us understand your
 issue, enabling a quicker investigation turnaround.
@@ -52,4 +52,4 @@ It contains a trace ID that links back to the original API request:
 
 * If your API request is instrumented using OpenTelemetry, W3C Trace Context or other
   interoperable tools, these tools would inject a `traceparent` header automatically.
-  Vital's instructure would adopt the trace ID from your API request.
+  Vital's infrastructure would adopt the trace ID from your API request.
