--- a/docs/home/getting-support.mdx
+++ b/docs/home/getting-support.mdx
@@ -15,22 +15,23 @@ issue, enabling a quicker investigation turnaround.
 
 ### Basic information
 
-| Item | Remarks |
-| ---- | ------- |
-| Your Vital Team ID | - |
-| Your Vital region | US or EU |
-| The Vital User ID | ...if the issue occurs on a specific user. |
-| The Vital environment | Sandbox, Production or both |
+| Item                  | Remarks                                    |
+| --------------------- | ------------------------------------------ |
+| Your Vital Team ID    | -                                          |
+| Your Vital region     | US or EU                                   |
+| The Vital User ID     | ...if the issue occurs on a specific user. |
+| The Vital environment | Sandbox, Production or both                |
 
 ### Issues with SDK behaviour
 
 
-| Item | Remarks |
-| ---- | ------- |
-| SDK Platform | Native, React Native, Flutter |
-| SDK Version | - |
-| Operating System | Android or iOS                |
-| Auth Scheme  | Vital Sign-In Token, or Team API Key |
+| Item               | Remarks                       |
+| ------------------ | ----------------------------- |
+| Vital SDK Platform | Native, React Native, Flutter |
+| Vital SDK Version  | -                             |
+| Device OS          | Android or iOS                |
+| Device OS Version  | -                             |
+| Auth Scheme        | Vital Sign-In Token, or Team API Key |
 
 
 ### Issues with Vital API
