Copy warning from changelog to Fitbit guide.

--- a/docs/wearables/guides/fitbit.mdx
+++ b/docs/wearables/guides/fitbit.mdx
@@ -51,3 +51,9 @@ Vital makes the best time zone guess in the following precedences:
     <Note>This is usually incorrect, except for users living an all-year UTC (+00:00) region.</Note>
     </Step>
 </Steps>
+
+
+<Warning>
+When your user refuses to grant both the activity and the profile scope, Fitbit data are more likely be timestamped incorrectly
+in UTC time basis due to inaccurate or unavailable time zone information.
+</Warning>
